# imitation-game

./: README.md  main.py  pyproject.toml
imitgame/: __init__.py  cli.py  game.py
imitgame/providers/: __init__.py  base.py  gemini_prefill.py  openrouter.py
prompts/: initial_topic.txt  judge_vote.txt  persona_ondrej.txt  system_game.txt  system_transcript_sim.txt
